@@ -3,3 +3,6 @@
 
 2021-07-06
 1. add docker compose
+
+2021-07-16
+1. add docker doris
